
Mon Sep 24 18:50:25 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: catch a few more error conditions with exceptions instead of
	erroring out.
	Don't use g_print() in stack traces because it doesn't work with
	some float values.
	When we call an instance method of a valuetype class, unbox the 'this'
	argument if it is an object.
	Use mono_ldstr () to implement the ldstr opcode: it takes care of
	interning the string if necessary.
	Implemented new opcodes: ckfinite, cgt.un, clt.un, ldvirtftn, ldarga.
	Fixes to handle NaNs when comparing doubles.
	Make sure the loaded assembly has an entry point defined.
	Fixed portability bugs in neg and not opcodes.

2001-09-24  Dietmar Maurer  <dietmar@ximian.com>

	* interp.c (ves_exec_method): LDC_I4: 8bit constants are signed
	(ves_exec_method): bug fix for NOT/NEG

2001-09-23  Dick Porter  <dick@ximian.com>

	* Makefile.am (mint_LDADD): rename PTHREAD_LIBS to THREAD_LIBS

2001-09-23  Dick Porter  <dick@ximian.com>

	* interp.c (main): Do some thread setup and cleanup around the
	call to ves_exec()

2001-09-21  Dick Porter  <dick@ximian.com>

	* Makefile.am (mint_LDADD): Added PTHREAD_LIBS to the link line

Thu Sep 20 16:32:42 CEST 2001 Paolo Molaro <lupus@ximian.com>

	* interp.c: implemented some more opcodes: calli, rem.un,
	shr.un, conv.u, cpobj, stobj, conv.r.un, conv.ovf.i1.un,
	conv.ovf.i2.un, conv.ovf.i4.un, conv.ovf.i8.un, conv.ovf.i.un,
	conv.ovf.u1.un, conv.ovf.u2.un, conv.ovf.u4.un, conv.ovf.u8.un,
	conv.ovf.u.un.
	Fix some 64 bit issues in the array element access code and a small bug.
	Throw an exception on index out of range instead of asserting.
	Throw an exception on a NULL array instead of dying.
	Stomped a memory corruption bug (.cctor methods were freed after
	executing them, but they are stores in MonoClass now...).
	Added a simple facility to invoke the debugger when a named
	function is entered (use the cmdline option --debug method_name).
	* interp.h: fix 64 bit issue.
